# meethub

./: .dockerignore  .env.example  Dockerfile.service  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: MIGRATIONS.md  SMOKE_TEST.md  backend_requests.yml  openapi.yaml
infra/nginx/: default.conf
infra/traefik/: dynamic.yml
migrations/auth/: alembic.ini  env.py
migrations/auth/versions/: 0001_initial.py
migrations/feed/: alembic.ini  env.py
migrations/feed/versions/: 0001_initial.py  0002_media_type_image.py
migrations/moderation/: alembic.ini  env.py
migrations/upload/: alembic.ini  env.py
scripts/: run_migrations.py  smoke_test.ps1
services/feed_service/: __init__.py
services/moderation_service/: __init__.py
services/upload_service/: __init__.py
shared/: __init__.py  alembic.py  api.py  db.py  health.py  queue.py  security.py  startup.py  storage.py
tests/test_auth/: conftest.py  test_login.py  test_register.py
tests/test_feed/: conftest.py  test_approved.py  test_cache.py  test_likes.py  test_video.py
tests/test_moderation/: __init__.py  conftest.py  test_queue.py  test_review.py
tests/test_shared/: test_api.py  test_queue.py  test_security.py  test_startup.py  test_storage.py
tests/test_upload/: __init__.py  conftest.py  test_complete_status.py  test_request_upload.py
workers/afisha_parser/: __init__.py  fetcher.py  main.py  models.py  publisher.py  settings.py
workers/transcoder/: __init__.py  container.py  contracts.py  gateways.py  main.py  settings.py
(+53 files in other folders)
